Fix spacing under title

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -138,7 +138,7 @@
 .home-partners-title {
 	margin: 0 auto 0 auto;
     width: 100%;
-    margin-bottom: 0px;
+    margin-bottom: 40px;
 	h2 {
 		color: $teal;
 		text-transform: uppercase;
